force-app/main/default/objects/QB_AP_Line_Item__c/QB_AP_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Bill or PO Line Items</description>
    <label>QB Bill / PO Line Item</label>
    <nameField>
        <label>Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Bill / PO Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>