force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_AP_AR_Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>QB_AP_AR_Account_Reference__c</fullName>
    <label>Ledger Account Code ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>