force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Bill_PO__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QB Bill / PO</label>
    <referenceTo>QB_Bill_PO__c</referenceTo>
    <relationshipName>QB_Bill_PO_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>