force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Bill_PO_Account_line__c.field-meta.xml
<CustomField>
    <fullName>QB_Bill_PO_Account_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QB_Bill / PO (Account line)</label>
    <referenceTo>QB_Bill_PO__c</referenceTo>
    <relationshipName>QB_Bill_PO_Account_Details</relationshipName>
    <type>Lookup</type>
</CustomField>