force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Billable__c.field-meta.xml
<CustomField>
    <fullName>QB_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>