force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Class__c.field-meta.xml
<CustomField>
    <fullName>QB_Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>