force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Customer__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>QB_Company__c</referenceTo>
    <relationshipLabel>Bill &amp; PO Line Items</relationshipLabel>
    <relationshipName>Bill_PO_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>