force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>