force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Item_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Item_Ref__c</fullName>
    <label>Product/Service ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>