force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>