force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_MarkupInfo__c.field-meta.xml
<CustomField>
    <fullName>QB_MarkupInfo__c</fullName>
    <label>Markup %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>