force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>QB_Product_Service__c</fullName>
    <label>Product/Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>