force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Quantity_2_Decimals__c.field-meta.xml
<CustomField>
    <fullName>QB_Quantity_2_Decimals__c</fullName>
    <formula>QB_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>