force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Rate_2_Decimals__c.field-meta.xml
<CustomField>
    <fullName>QB_Rate_2_Decimals__c</fullName>
    <formula>QB_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>