force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Rate__c.field-meta.xml
<CustomField>
    <fullName>QB_Rate__c</fullName>
    <label>Rate (7 Decimals)</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>