force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Tax__c.field-meta.xml
<CustomField>
    <fullName>QB_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>