force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>QB_Tax_Amount__c</fullName>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>