force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>QB_Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>