force-app/main/default/objects/QB_AP_Line_Item__c/fields/QB_Type__c.field-meta.xml
<CustomField>
    <fullName>QB_Type__c</fullName>
    <formula>IF( QB_Bill_PO_Item_line__c !=null,&quot;Item Line&quot;,IF(QB_Bill_PO_Item_line__c!=null,&quot;Account Line&quot;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>